// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QLazyImage 快照测试 > 未加载时渲染骨架屏占位 1`] = `
"<div data-v-303019db="" class="lazy-image-container" style="width: 100%; height: 100%;">
  <!-- 骨架屏占位 -->
  <div data-v-303019db="" class="lazy-image-skeleton"></div><!-- 实际图片 -->
  <!--v-if-->
</div>"
`;

exports[`QLazyImage 快照测试 > 自定义宽高渲染 1`] = `
"<div data-v-303019db="" class="lazy-image-container" style="width: 200px; height: 120px;">
  <!-- 骨架屏占位 -->
  <div data-v-303019db="" class="lazy-image-skeleton"></div><!-- 实际图片 -->
  <!--v-if-->
</div>"
`;
